--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
             <version>4.4.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.28</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
